changed photos to be more consistent and aligned correctly

--- a/index.css
+++ b/index.css
@@ -93,3 +93,16 @@ a:hover {
     width: auto;
   }
 }
+@media only screen and (min-width: 1050px) {
+  .project {
+    position: relative;
+    height: 751px;
+  }
+  img {
+    position: absolute;
+    bottom: 0;
+  }
+  .bio-section {
+    max-width: 700px;
+  }
+}
